improved a few things added doc for mutators

--- a/configs/fmt_str.cfg
+++ b/configs/fmt_str.cfg
@@ -8,7 +8,7 @@ keep_fuzzfiles = False
 core_dir = ./core
 
 ranges = {
-	   "2-5": "MUTATOR_PERMUTE_ALL",
+	   # "2-5": "MUTATOR_PERMUTE_ALL",
 	   "8-11": "MUTATOR_STRING_OVERFLOW",
 	   "0-1": "MUTATOR_FORMAT_STRING",
 	   }
