--- a/configs/tcpdump.cfg
+++ b/configs/tcpdump.cfg
@@ -2,17 +2,17 @@
 session_name = tcpdump_fuzz
 template_file = ./templates/small.pcap
 logfile = ./logs/fuzz_%(session_name)s_{date}.log
-command = /usr/sbin/tshark -r %(template_file)s
+command = /usr/sbin/tcpdump -r %(template_file)s
 fuzzfiles_dir = ./fuzzfiles
 keep_fuzzfiles = False
 core_dir = ./core
 
 ranges = {
        # pcap header
-	   # "4-6":     "MUTATOR_SHORT_OVERFLOW", #major
-       # "6-8":     "MUTATOR_SHORT_OVERFLOW", # minor
-       "8-12":    "MUTATOR_INTEGER_OVERFLOW", # thiszone
-       "12-16":    "MUTATOR_INTEGER_OVERFLOW", # sigfigs
-       "16-20":    "MUTATOR_INTEGER_OVERFLOW", # snaplen
-       "20-24":    "MUTATOR_INTEGER_OVERFLOW", # network
+	   "4-5":     "MUTATOR_SHORT_OVERFLOW", #major
+       "6-7":     "MUTATOR_SHORT_OVERFLOW", # minor
+       "8-11":    "MUTATOR_INTEGER_OVERFLOW", # thiszone
+       "12-15":    "MUTATOR_INTEGER_OVERFLOW", # sigfigs
+       "16-19":    "MUTATOR_INTEGER_OVERFLOW", # snaplen
+       "20-23":    "MUTATOR_INTEGER_OVERFLOW", # network
        }
