--- a/configs/tshark.cfg
+++ b/configs/tshark.cfg
@@ -1,18 +1,13 @@
 [Session]
 session_name = tshark_fuzz
-template_file = ./templates/small.pcap
+template_file = ./templates/http.pcap
 logfile = ./logs/fuzz_%(session_name)s_{date}.log
 command = /usr/bin/tshark -r %(template_file)s
 fuzzfiles_dir = ./fuzzfiles
-keep_fuzzfiles = False
+keep_fuzzfiles = True
 core_dir = ./core
 
 ranges = {
-       # pcap header
-	   # "4-6":     "MUTATOR_SHORT_OVERFLOW", #major
-       # "6-8":     "MUTATOR_SHORT_OVERFLOW", # minor
-       "8-12":    "MUTATOR_INTEGER_OVERFLOW", # thiszone
-       "12-16":    "MUTATOR_INTEGER_OVERFLOW", # sigfigs
-       "16-20":    "MUTATOR_INTEGER_OVERFLOW", # snaplen
-       "20-24":    "MUTATOR_INTEGER_OVERFLOW", # network
+       "5390-5393": "MUTATOR_INTEGER_OVERFLOW",
+       "5394-5397": "MUTATOR_INTEGER_OVERFLOW",
        }
