works on windows too

--- a/configs/firefox.cfg
+++ b/configs/firefox.cfg
@@ -1,15 +1,14 @@
 [Session]
-name = firefox
-template_file = ./templates/temp_fuzz.html
-logfile = ./logs/fuzz_%(name)s_{date}.log
-target = /home/hugsy/tools/firefox/firefox --private -P fuzz_profile %(template_file)s
+session_name = firefox
+template_file = ./templates/page.html
+logfile = ./logs/dufe_%(session_name)s_{date}.log
+command = "C:\Program Files (x86)\Mozilla Firefox\firefox.exe" file://%(template_file)s
 fuzzfiles_dir = ./fuzzfiles
 keep_fuzzfiles = False
-# use_fuzzfile = None
-use_fuzzfile = %(fuzzfiles_dir)s/fuzz.html
+core_dir = ./core
 
 ranges = {
-	   "40-43": "MUTATOR_HTML_TAGS",
-	   "52-55": "MUTATOR_STRING_OVERFLOW",
-	   "60-63": "MUTATOR_HTML_TAGS",
+	   "38-41": "MUTATOR_HTML_TAGS",
+	   "43-46": "MUTATOR_INTEGER_OVERFLOW",
+	   "49-52": "MUTATOR_HTML_TAGS",
 	   }
