--- a/configs/tshark.cfg
+++ b/configs/tshark.cfg
@@ -4,7 +4,7 @@ template_file = ./templates/http.pcap
 logfile = ./logs/fuzz_%(session_name)s_{date}.log
 command = /usr/bin/tshark -r %(template_file)s
 fuzzfiles_dir = ./fuzzfiles
-keep_fuzzfiles = True
+keep_fuzzfiles = False
 core_dir = ./core
 
 ranges = {
